# VkCraft

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-windows.yml
Development/CMake/: Cache.cmake  CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
Source/: CMakeLists.txt
Source/src/: main.cpp
